@@ -1,18 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST python-osmgpsmap-0.5.0.tar.gz 301756 RMD160 7946c0d4251a4f2047cd1bb4f2cc6eaae01b861c SHA1 d45cf71fc2fc1f69c7003a68d004f1dc49b603a5 SHA256 33338d5064d5338fd6ddc06b1270fc0fb755ce6aa3f9984084d3166f1ec94caf
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST python-osmgpsmap-0.7.1.tar.gz 304653 RMD160 7b59b463ac35faf7017d104b27625289b0f05ee2 SHA1 a80011e529f9727c8f80f2f1ea8e1fb61caca5bc SHA256 6b0bcddbeccb51473561951bb1e316d7515e4f1d24b409d1e68c6de3bdad5fc9
 DIST python-osmgpsmap-0.7.2.tar.gz 305114 RMD160 9ead78cb7974c0299c7cd1d916621725b584c2ce SHA1 1bbcacf6cdd8160e95647ee7a0f53bb643446919 SHA256 ff984f720246d68d5a9bdf914041ab8e317c859266c2ea9c897a9e247fe56a41
-EBUILD python-osmgpsmap-0.5.0.ebuild 683 RMD160 e43e8f3be7be73ad46ed945796d31cf17f9442a7 SHA1 c83a59217a786bf81951a1a880ee0146ab233d28 SHA256 808a13805ae58950c0ff6e834a8fc2b02b03e3d958c6ab69fcd10f4f7512fe21
-EBUILD python-osmgpsmap-0.7.1.ebuild 691 RMD160 3f0b37c6cb3e9a6d4286eff5601f232ba03fdb2e SHA1 530f14b7fbcc0f6b0d78ec28fd905c5fb13a064b SHA256 be677a82c31246f4465c09fc78f4ff84bce9e643ef4c0a87cc7703b9299d8bf8
+EBUILD python-osmgpsmap-0.7.1.ebuild 690 RMD160 c6cf4b4c43c10994ec3528ec078a06529bf5c484 SHA1 226cad29a4db2d96c47e997e046c1f9bec2c62a9 SHA256 3e26d931f2d8613caa44eeec2006c6b014a4ba0e8610acfdb250bfe5ac0c72a7
 EBUILD python-osmgpsmap-0.7.2.ebuild 692 RMD160 14d326686c90f17e4707e7186786eba131f06272 SHA1 cfd403d0c3a1fa0b777e4d921e4d9135bfbed2ff SHA256 b444fc9bde809fe87ed2d796c9d30fc71445916b323d5ae3df30ca2270cff5b2
-MISC ChangeLog 946 RMD160 537bea09bca55f609a032b32530c25b10cac2d54 SHA1 6d334f515f6ed934c47909e7db1a115b2d1f4351 SHA256 9801c2a5608570c05b97e0976390ae1838b3eac35d8f0939df1726f1cafa990a
+MISC ChangeLog 1074 RMD160 d7264b09fe640f1a840887db475cf667ed736ba0 SHA1 d543a900c1d6cc456cfb8ff11222303f3d72401a SHA256 eb5ed8b91d2d977dd50fae755cae9b5ec35554b80ba92c562fb10d5b36119ca8
 MISC metadata.xml 523 RMD160 f7ff5838b2704a67d1e046a9aac19a9258e085c2 SHA1 ba92e8adf9944c6eec6c831097ad86bc27f92a99 SHA256 011a0bf002ca76cb43013a8e85543663424fc89bbe4163160bd17f0595250e0a
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkxe5uYACgkQzJrj3cAXR0nuLQCeIJ1VuTZqYgfdApsSRDdcRyGK
+42MAn2ILmzOXNiL3xR/84Z8EADZXvTre
+=XkfS
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkxe4VgACgkQzJrj3cAXR0lyswCgrkoZBnPERpfD6O8k04frwtVM
-WRsAni9IbQbmYiz/x0pFKP0JLGtUowPk
-=3rdF
+iEYEARECAAYFAkxe7FgACgkQzJrj3cAXR0mafgCeO1F+pCpdDUTcPMpqNRgufVOb
+eE8An35O49bt3bmJcHC4QOjX11N8+YLx
+=4s9F
 -----END PGP SIGNATURE-----
