@@ -1,22 +1,0 @@
-dev-python/pygtk sci-geosciences/osm-gps-map dev-util/pkgconfig >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/pygtk sci-geosciences/osm-gps-map >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-http://www.johnstowers.co.nz/files/osm-gps-map/python-osmgpsmap-0.5.0.tar.gz
-test
-http://nzjrs.github.com/osm-gps-map/
-GPL-3
-Python bindings for osm-gps-map
-amd64 x86
-distutils multilib python toolchain-funcs
-
-
-
-
-3
-
-compile configure install postinst postrm prepare
-
-
-
-
-
