@@ -1,4 +1,3 @@
-REM 2010-08-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/python-osmgpsmap-0.7.1 %a
 REM 2010-08-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-apps/mnemosyne-0.12 %a
 REM 2010-08-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-apps/mnemosyne-0.12 %a
 REM 2010-08-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 net-misc/bleeter-0.6.0 %a
