@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Aug 2010; James Rowe <jnrowe@gmail.com> -python-osmgpsmap-0.5.0.ebuild,
+  python-osmgpsmap-0.7.1.ebuild:
+  Keyworded x86.
+
   08 Aug 2010; James Rowe <jnrowe@gmail.com> python-osmgpsmap-0.7.1.ebuild:
   Keyworded amd64.
 
